error.log
> feedeliza-plus@1.0.0 start
> node server.js
file:///app/src/config/config.js:4
import logger from "../utils/logger.js";
       ^^^^^^
SyntaxError: The requested module '../utils/logger.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:213:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:320:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)
Node.js v20.19.5